--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		<!-- Twillio-serviço de sms - cadastro realizado -->
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>8.31.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
