--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,8 +11,8 @@
 	</parent>
 	<groupId>com.devsuperior</groupId>
 	<artifactId>dsmeta</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<version>1.0</version>
+	<packaging>jar</packaging>
 	<name>dsmeta</name>
 	<description>Projeto da Semana Spring React DevSuperior</description>
 	<properties>
